@@ -1,7 +1,8 @@
 0.11.7
 Check size of returned CD-TEXT data to be a multiple of the pack length. This should fix problems
 	with CD copy.
-
+Audio Project: Do not overwrite CD-Text values loaded from the project file with the ones detected.
+	
 0.11.6
 Fixed length calculation for long FLAC files.
 Allow Audio CDs that violate the Red Book standard (Tracks shorter than 4 seconds)
